# AXIOM_DEMO_UI

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakeSettings.json  README.md  docker-compose.dev.yml  env.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  problem.json  run_dev_server.py  sync-lite-2.patch  sync-lite.patch  tmp-playwright-log.txt  todo.md  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts
.git_backup_20250905_091342/: COMMIT_EDITMSG  config  index
.github/: .index-ping
app/: main.tsx
ax-design/: AX_UI_ITERATION_v0.5.md  AX_UI_ROADMAP_v0.2.md  TZ_AXIOM_Codex_Agent_v0.2.md  components.css  tokens.css
components/: AdminGate.tsx  AuthGate.tsx  Breadcrumbs.tsx  ContentCardExpanded.tsx  ContentCategoryTiles.tsx  ContentFilters.tsx  ContentList.tsx  ContentPreview.tsx  ContentTabs.tsx  ErrorBlock.tsx  LoreTree.tsx  Modal.tsx  NewsCard.tsx  NewsFeed.tsx  NewsTicker.tsx  PanelNav.tsx  PreviewBar.tsx  PreviewPane.tsx  RouteHoldBanner.tsx  ScaleDebug.tsx  ScaleViewport.tsx  StatusLine.tsx  TelemetryBridge.tsx  TerminalBoot.tsx  Ticker.tsx  UserMenuDropdown.tsx  utils.ts
content-src/: 01.01_CENTRAL_NODE.md  03.00_CHARACTER_TEMPLATE.md  03.01_VIKTOR.md  03.02_LIZA.md  03.03_AXIOM.md  03.04_TOMMY.md  03.17_WHITE_CONTOUR.md  03.18_NOFACE.md  03.99_EVA.md  04.00_TECH_TEMPLATE.md  05.00_FACTION_TEMPLATE.md  06.00_EVENT_TEMPLATE.md  FAC-CHROME-SYNDICATE-0610.md  FAC-REAPERS-0609.md  LOC-ECHELON-CORE.md  LOC-ECHELON-UNDERCITY.md  TEC-ACCELERATOR-0501.md  TEC-BLOODTECH-0507.md  TEC-GROM-FIST-0508.md  TEC-HARPOON-0504.md  (+5 more)
(+439 files in other folders)
